--- a/Project 2.vcxproj.filters
+++ b/Project 2.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Tree\Node\internalNode.hpp">
       <Filter>Source Files\Tree\Node</Filter>
     </ClInclude>
+    <ClInclude Include="studentRecord.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -41,6 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="test2.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
